# ARG

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/rules/: chunker.md  concurrency.md  core.md  crawler.md  generator.md  pipeline.md  retriever.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
arg/: __init__.py  config.py  embeddings.py  llm.py  pipeline.py  server.py
arg/crawler/: __init__.py  crawler.py  extractors.py  watcher.py
arg/dci/: __init__.py  analyst.py  explorer.py
arg/generator/: __init__.py  generator.py  query_processor.py
arg/graph/: __init__.py  knowledge_graph.py
arg/indexer/: __init__.py  chunker.py  indexer.py
arg/logging/: __init__.py  json_formatter.py  tracing.py
arg/retriever/: __init__.py  bm25_index.py  retriever.py
arg/static/: index.html
docs/: BUILD_ORDER.md
docs/features/: 0000-template.md  0001-plain-text-indexing.md  0002-streaming-indexing.md  0003-large-corpus-hardening.md  0004-pdf-extraction-efficiency.md  0005-parallel-extraction-pipeline.md  0006-index-quality-improvements.md
docs/plans/: parallel-extraction-pipeline.md  pdf-extraction-efficiency.md
docs/spec/: section-03-bootstrap.md  section-04-config.md  section-05-crawler.md  section-06-knowledge-graph.md  section-07-indexer.md  section-08-retriever.md  section-09-generator.md  section-10-pipeline.md  section-11-integration.md  section-12-e2e.md  section-19-operations.md
scripts/: bootstrap.sh  check_imports.py  debug_retrieval.py  debug_stage0.py  eval_retrieval.py  index_docs.py  index_report.py  inspect_doc.py  reset_corpus.py  show_llm_prompts.py
tests/: conftest.py
tests/e2e/: test_dci_e2e.py  test_full_rag.py
tests/fixtures/: build_pdfs.py
tests/fixtures/clustering_docs/: index.html  t1_backup.html  t1_indexing.html  t1_overview.html  t1_query.html  t1_schema.html  t2_firewall.html  t2_monitoring.html  t2_overview.html  t2_routing.html  t2_vpn.html  t3_jobs.html  t3_logging.html  t3_overview.html  t3_triggers.html  t3_workers.html
tests/fixtures/docs/: NOTES.md  index.html  page_a.html  page_b.html  release_notes.txt
tests/fixtures/docs/subdir/: page_c.html
tests/integration/: test_crawler_to_graph.py  test_graph_to_indexer.py  test_indexer_to_retriever.py  test_retriever_to_generator.py
tests/unit/: _fakes.py  test_analyst.py  test_bm25s_compat.py  test_bootstrap.py  test_chunker.py  test_concurrency.py  test_config.py  test_crawler.py  test_explorer.py  test_extractors.py  test_generator.py  test_indexer.py  test_invariants.py  test_knowledge_graph.py  test_kuzu_compat.py  test_logging.py  test_pdfplumber_compat.py  test_pipeline.py  test_retriever.py  test_server.py  test_watcher.py
