[project]
name = "arg"
version = "0.1.0"
description = "Archivist RAG Graph — a fully local, knowledge-graph-augmented RAG for HTML and PDF documentation."
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    # RAG framework — exact-pinned to a verified compatible set (Section 3).
    "llama-index-core==0.14.21",
    "llama-index-vector-stores-chroma==0.5.5",
    "llama-index-graph-stores-kuzu==0.9.1",
    "llama-index-llms-ollama==0.10.1",
    "llama-index-embeddings-ollama==0.9.0",
    # Stores
    "chromadb>=0.5",
    "kuzu>=0.6,<0.13",
    # Parsing
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdfplumber>=0.11,<0.12",
    "pymupdf>=1.24",
    # File watching
    "watchdog>=4.0",
    # Web UI
    "fastapi>=0.111",
    "uvicorn>=0.47.0",
    # Utilities
    "httpx>=0.27",
    "python-dotenv>=1.0",
    # DCI clustering
    "scikit-learn>=1.4",
    # Sparse retrieval
    "bm25s>=0.2,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arg*"]
exclude = ["tests*", "scripts*", "docs*", "vendor*", "arg_db*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "arg_db", "vendor", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long — the formatter handles it
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow `assert False` in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
# Pragmatic: LlamaIndex / Kuzu / Chroma have uneven third-party stubs.
ignore_missing_imports = true
disallow_untyped_defs = false
exclude = ["tests/", "scripts/", "\\.venv/", "build/", "dist/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests (require local services)",
    "e2e: end-to-end tests (require Ollama running with qwen3.6 + nomic-embed-text)",
    "pdf: tests that require the PDF extractor (skipped in HTML pass of Section 5)",
]
